# tree-sitter-swift

./: .gitattributes  .gitignore  Cargo.toml  MANIFEST.in  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  grammar.ts  package-json-old-tree-sitter.json  package-lock.json  package.json  pyproject.toml  setup.py  shields.json  test.swift  tree-sitter-swift.wasm  tree-sitter.json
.github/workflows/: check.yml  generate-static-grammar.yml  package-npm.yml  package.yml  parser-src.yml  publish-prebuilt.yml  publish-pypi.yml  publish-rust.yml  publish.yml  publish_npm.yml  release.yml  test-older-tree-sitter.yml  top-repos.yml  update-repos.yml
bindings/c/: tree-sitter-swift.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/rust/: lib.rs
corpus/: classes.txt  expressions.txt  functions.txt  literals.txt  statements.txt  types.txt
queries/: highlights.scm  indents.scm  injections.scm  locals.scm  outline.scm  tags.scm
script-data/: known_failures.txt  top-repositories.txt
scripts/: check-dirty.sh  common.sh  top-repos.sh  update-top-repos.sh  write-generated-grammar.sh
src/: grammar.json  node-types.json  scanner.c
test-npm-package/: package-lock.json  package.json
test/corpus/: annotations.txt  classes.txt  emojis.txt  expressions.txt  functions.txt  literals.txt  macros.txt  statements.txt  types.txt
test/highlight/: AppDelegate.swift  Bag.swift  HeroStringConvertible.swift  ImagePipelineConfiguration.swift  LazyImage.swift  MediaMessageCell.swift  OperatorUsageWhitespaceConfiguration.swift  PlayerWindowController.swift
(+6 files in other folders)
